--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-http-concat",
+  "name": "http-concat",
   "description": "A express middleware for concatenating files in a given context: CSS and JS files usually",
   "version": "0.1.0",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/weizs/express-http-concat.git"
+    "url": "https://github.com/weizs/http-concat.git"
   },
   "keywords": [
     "express",
